--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,30 +1,39 @@
-<div class="container">
-    <h1 class="text-center">Login</h1>
-    <div class="row">
-        <div class="col-lg-12" *ngIf="status">
-            <div class="alert alert-danger" role="alert">
+<div class="wrapper" *ngIf="!common.noInternet">
+    <div id="formContent">
+        <!-- Tabs Titles -->
+
+        <!-- Icon -->
+        <div class="">
+            <img src="assets/images/logo.png" id="icon" alt="User Icon" />
+        </div>
+
+        <!-- Email Form -->
+        <form>
+            <div class="alert alert-danger" role="alert" *ngIf="status">
                 {{status}}
             </div>
-        </div>
-        <div class="col-lg-12">
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input id="userName" class="form-control" type="text" name="userName" placeholder="Username"
-                    value="{{userName}}" (keyup)="onKeyUp($event, 'userName')" />
-                <div class="text-danger" *ngIf="inValidUserName">Username is required</div>
+            <input type="text" id="Email" name="Email" placeholder="Email" value="{{userName}}"
+                (keyup)="onKeyUp($event, 'userName')" />
+            <div class="text-danger" *ngIf="inValidUserName">Username is required</div>
+            <input type="text" id="password" name="password" placeholder="Password"
+                (keyup)="onKeyUp($event, 'password')" />
+            <div class="text-danger" *ngIf="inValidPassword">Password is required</div>
+            <input type="button" [disabled]="unUseUserName || unUsePassword" (click)="handleLogin($event)"
+                value="Log In">
+            <a href="#" style="color: white;" [routerLink]="['/register']">Register</a>
+            <div class="note" style="color: white;">
+                <small>Note : your details are safe with us and will not be passed on</small>
             </div>
+        </form>
+
+        <!-- Remind Passowrd -->
+        <div id="formFooter">
+            <a class="underlineHover" style="color: white;" href="#">Forgot Password?</a>
         </div>
-        <div class="col-lg-12">
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input id="password" class="form-control" type="password" name="password" placeholder="Password"
-                    (keyup)="onKeyUp($event, 'password')" />
-                <div class="text-danger" *ngIf="inValidPassword">Password is required</div>
-            </div>
-        </div>
-        <div class="col-lg-6 offset-lg-3">
-            <button class="btn btn-warning btn-block" type="button"
-                [disabled]="unUseUserName || unUsePassword" (click)="handleLogin($event)">Login</button>
-        </div>
+
     </div>
+</div>
+
+<div *ngIf="common.noInternet">
+    <app-internet></app-internet>
 </div>
