--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,16 +1,48 @@
-<div *ngIf="auth">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand">Pristin</a>
-        <button class="navbar-toggler" (click)="isMenuCollapsed = !isMenuCollapsed">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link"  (click)="logout($event)">Logout</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <div style="margin-top: 5em;"></div>
+<div id="mySidenav" class="sidenav" [ngClass]="common.navClass">
+    <a class="closebtn" (click)="common.closeNav()">&times;</a>
+    <a [routerLink]="['/']" (click)="common.closeNav()">Competitions</a>
+    <a [routerLink]="['/entrylist']" (click)="common.closeNav()">Entry List</a>
+    <a [routerLink]="['/draw']" (click)="common.closeNav()">Draws</a>
+    <a [routerLink]="['/winninggallery']" (click)="common.closeNav()">Winning Gallery</a>
+    <a [routerLink]="['/cms/2']" (click)="common.closeNav()">About</a>
+    <a [routerLink]="['/cms/3']" (click)="common.closeNav()">Contact</a>
+    <a [routerLink]="['/cms/10']" (click)="common.closeNav()">Faqs</a>
+    <a [routerLink]="['/cms/5']" (click)="common.closeNav()">How To Play</a>
+    <a [routerLink]="['/cms/11']" (click)="common.closeNav()">Terms and Condation</a>
+    <a [routerLink]="['/cms/12']" (click)="common.closeNav()">Privacy and Policy</a>
+    <!-- <div *ngIf="authService.authenticate">
+        <a [routerLink]="['/my-account']" (click)="common.closeNav()">My Account</a>
+        <a [routerLink]="['/changepassword']" (click)="common.closeNav()">Change Password</a>
+        <a [routerLink]="['/myorder']" (click)="common.closeNav()">My Order</a>
+        <a (click)="logout($event)">Logout</a>
+    </div>
+    <div *ngIf="!authService.authenticate">
+        <a [routerLink]="['/login']" (click)="common.closeNav()">Login</a>
+        <a [routerLink]="['/register']" (click)="common.closeNav()">Register</a>
+    </div> -->
 </div>
+<div class="container-fluid fixed-top" style="background-color: black;">
+    <div class="container">
+        <div class="row">
+            <div class="col-2">
+                <div style="padding-top:5px">
+                    <span style="font-size:30px;cursor:pointer;color: #D3C499;"
+                        (click)="common.openNav()">&#9776;</span>
+                </div>
+            </div>
+            <div class="col-8">
+                <img src="assets/images/logo.png" [routerLink]="['/']" width="100%"
+                    style="height: 60px; object-fit: contain;">
+            </div>
+            <div class="col-2 float-right" style="padding: 5px;">
+                <div style="padding-top:10px">
+                    <a (click)="common.closeNav()" [routerLink]="['/cart']"><i class="fa fa-shopping-cart" aria-hidden="true"
+                            style="font-size:25px; color:white"></i><span class="badge badge-warning lblCartCount"
+                            id="totalqty">{{common.totalQuantity}}</span></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div style="margin-bottom: 60px;"></div>
