--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -12,7 +12,7 @@
 
         </div>
         <div class="card-footer text-muted">
-            Your account created <strong>{{createdAt | date: 'LLL-dd-yyyy h:m:s a z'}}</strong>
+            Your account created by <strong>{{createdAt | date: 'LLL-dd-yyyy h:m:s a z'}}</strong>
         </div>
     </div>
 </div>
